reparando rotulito de cancer

--- a/templates/encuesta/salud.html
+++ b/templates/encuesta/salud.html
@@ -85,7 +85,7 @@ $(document).ready(function() {
         <a id="grafico9" href="#" onCLick="click_cancer(4)">¿Cómo han sido los resultados de su PAP?</a>
         <a id="grafico10" href="#" onCLick="click_cancer(5)">¿Como ha hecho para tratarse los problemas que le han resultado del PAP?</a>
         <a id="grafico11" href="#" onCLick="click_cancer(6)">¿Actualmente tiene usted algún problema de salud reproductiva que le preocupe?</a>
-        <h1>Cáncer</h1>
+        <h1>Salud Mental</h1>
         <a id="grafico12" href="#" onCLick="click_mental(1)">Estado civil</a>
         <a id="grafico13" href="#" onCLick="click_mental(2)">¿Trata de impedirle que vea a sus amistades?</a>
         <a id="grafico14" href="#" onCLick="click_mental(3)">¿Intenta que usted no tenga contacto con su familia?</a>
