componiedo el menu principal

--- a/templates/base.html
+++ b/templates/base.html
@@ -37,16 +37,16 @@
         
         <div id="menu">
             <ul>
-                <li><a class="selected" href="/organizacion">Organización</a></li>
-                <li><a href="/familias">Familias</a></li>
-                <li><a href="/produccion">Producción</a></li>
-                <li><a href="/animales">Animales</a></li>
+                <li><a href="/ingresos">Datos Generales</a></li>
+                <li><a href="/organizaciones">Organización</a></li>
+                <li><a href="/familias">Migración</a></li>
+                <li><a href="/alimento">Alimentos</a></li>
+                <li><a href="/servicios">Servicios</a></li>
+                <li><a href="/salud_hogar">Salud</a></li>
+                <li><a href="/finca">Finca</a></li>
                 <li><a href="/ingresos">Ingreso</a></li>
                 <li><a href="/equipos">Bienes</a></li>
-                <li><a href="/seguridad_alimentaria">Seguridad alimentaria</a></li>
                 <li><a href="/ahorro_credito">Ahorro y Crédito</a></li>
-                <li><a href="/jovenes">Jóvenes</a></li>
-                <li><a href="/servicios">Servicios</a></li>
             </ul>
         </div>
 
