--- a/templates/encuesta/agua.html
+++ b/templates/encuesta/agua.html
@@ -29,7 +29,6 @@
 {%endblock%}
 {% block contenido %}
 <div id="contenedor_servicio">
-    <a href="/salud" class="salud">Salud</a>
     <a href="/educacion" class="educacion">Educación</a>
     <a href="/agua"class="agua">Agua</a>
     <a href="/luz"class="luz">Luz</a>
@@ -58,6 +57,7 @@
 
 <div id="grafo"></div>
 <table>
+<caption>Tabla agua</caption>
  <thead>
     <tr>
         <th>Fuente</th>
