--- a/templates/encuesta/educacion.html
+++ b/templates/encuesta/educacion.html
@@ -4,13 +4,13 @@
 {%block titulo%}La Educación{%endblock%}
 {% block contenido %}
 <div id="contenedor_servicio">
-    <a href="/salud" class="salud">Salud</a>
     <a href="/educacion" class="educacion">Educación</a>
     <a href="/agua"class="agua">Agua</a>
     <a href="/luz"class="luz">Luz</a>
 </div>
 
 <table>
+<caption>Tabla Educación</caption>
  <thead>
     <tr>
         <th></th>
