--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -73,15 +73,16 @@
                     <div id="indicadores" class="der">
                         <h2 class="titulo_indicadores">INDICADORES</h2>
                         <div id="contenedor_indicadores">
-                            <a href="/familias" class="familia">Familias</a>
+                            <a href="#" class="familia">Datos Generales</a>
                             <a href="/organizacion" class="organizacion">Organización</a>
-                            <a href="/animales"class="animales">Animales</a>
-                            <a href="/cultivos"class="cultivos">Cultivos</a>
+                            <a href="/familias" class="familia">Migracion</a>
+                            <a href="/alimento" class="seguridad">Alimento</a>
+                            <a href="/servicios"class="servicios">Servicios</a>
+                            <a href="/servicios"class="salud">Salud</a>
+                            <a href="/servicios"class="cultivos">Finca</a>
                             <a href="/ingresos"class="ingresos">Ingresos</a>
                             <a href="/equipos"class="bienes">Bienes</a>
                             <a href="/ahorro_credito" class="ahorro">Ahorro y Crédito</a>
-                            <a href="/servicios"class="servicios">Servicios</a>
-                            <a href="/seguridad_alimentaria" class="seguridad">Seguridad Alimentaria</a>
                         </div>
                         
                     </div>
