--- a/templates/encuesta/luz.html
+++ b/templates/encuesta/luz.html
@@ -4,12 +4,12 @@
 {%block titulo%}Luz{%endblock%}
 {% block contenido %}
 <div id="contenedor_servicio">
-    <a href="/salud" class="salud">Salud</a>
     <a href="/educacion" class="educacion">Educación</a>
     <a href="/agua"class="agua">Agua</a>
     <a href="/luz"class="luz">Luz</a>
 </div>
 <table>
+<caption>Tabla Luz</caption>
  <thead>
     <tr>
         <th>Fuente</th>
