--- a/templates/encuesta/organizacion_jovenes.html
+++ b/templates/encuesta/organizacion_jovenes.html
@@ -1,8 +1,13 @@
 {% extends "base.html" %}
 {% block title %}Jóvenes{% endblock %}
-{%block titulo%}Jóvenes{%endblock%}
+{%block titulo%}Socios Jóvenes{%endblock%}
 {% block contenido %}
+<div id="contenedor_servicio">
+    <a href="/organizacion" class="organizacion">Socios Adultos </a>
+    <a href="/jovenes" class="educacion">Socios  Jóvenes</a>
+</div>
 <table>
+<caption>La organización socios jóvenes</caption>
  <thead>
     <tr>
         <th></th>
