--- a/templates/encuesta/seguridad.html
+++ b/templates/encuesta/seguridad.html
@@ -2,6 +2,10 @@
 {%load unslugify %}
 {%block titulo%}La Seguridad Alimentaria{%endblock%}
 {% block contenido %}
+<div id="contenedor_servicio">
+    <a href="/seguridad_alimentaria" class="seguridad">Seguridad Alimentaria</a>
+    <a href="/produccion"class="luz">Vulnerabilidad</a>
+</div>
 <table>
 <caption>La Seguridad Alimentaria</caption>
  <thead>
