--- a/templates/encuesta/riego.html
+++ b/templates/encuesta/riego.html
@@ -3,15 +3,15 @@
 {%block titulo%}Riego{%endblock%}
 {% block contenido %}
 <div id="contenedor_servicio">
-    <a href="/familia" class="familia">Familia</a>
-    <a href="/postcosecha" class="educacion">Post Cosecha</a>
-    <a href="/fincas"class="fincas">Finca</a>
-    <a href="/abono"class="luz">Abono y aplicacion</a>
-    <a href="/riego"class="luz">Riego</a>
-    <a href="/condiciones"class="luz">Condiciones</a>
+    <a href="/fincas" class="fincas">Uso Tierra</a>
+    <a href="#"class="luz">Suelo</a>
+    <a href="/cultivos"class="cultivos">Cultivos</a>
+    <a href="/animales"class="animales">Animales</a>
+    <a href="/postcosecha"class="arboles">Post Cosecha</a>
+    <a href="/riego"class="servicios">Riego</a>
 </div>
 <table>
-<caption>Riego</caption>
+<caption>Tabla Riego</caption>
  <thead>
     <tr>
         <th></th>
