--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -74,7 +74,7 @@
                         <h2 class="titulo_indicadores">INDICADORES</h2>
                         <div id="contenedor_indicadores">
                             <a href="#" class="familia">Datos Generales</a>
-                            <a href="/organizacion" class="organizacion">Organización</a>
+                            <a href="/organizaciones" class="organizacion">Organización</a>
                             <a href="/familias" class="familia">Migracion</a>
                             <a href="/alimento" class="seguridad">Alimento</a>
                             <a href="/servicios"class="servicios">Servicios</a>
