--- a/templates/index.html
+++ b/templates/index.html
@@ -43,13 +43,14 @@
     
     <div id="index_right">
     <h2>La Cooperativa</h2>
-        <br><p>La Cooperativa Juan Francisco Paz Silva tiene sus inicios en las tiendas campesinas que impulsó el gobierno durante los Años 80 y ha venido adoptando diferentes figuras legales con el propósito de tener condición jurídica para dar respuestas a los problemas de sus Asociados y Clientes en comunidades rurales. El centro neurálgico de la organización es la Tienda Campesina de la Cooperativa en la Población de Achuapa la cual es usada por un importante grupo poblacional como abastecedor de comercio al por menor.</p>
-        <br><p>La Cooperativa tiene en la actualidad 148 miembros contribuyentes, los servicios que esta ofrece se extienden a toda la población de la Municipalidad. De los 148 miembros, 131 son Hombres y 17 son Mujeres.</p>
+        <br><p>Where does it come from?
+Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32..</p>
+        <br><p>This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32..</p>
     </div><!-- Termina index right-->
     <div class="separador" ></div>
     <div id="grafo_index">
     <table>
-	<caption>Familias Beneficiadas</caption>
+	<caption>Beneficios Obtenido por ser Socios de la cooperativa</caption>
 	<thead>
 		<tr>
 			<td></td>
