--- a/templates/encuesta/riego.html
+++ b/templates/encuesta/riego.html
@@ -4,7 +4,7 @@
 {% block contenido %}
 <div id="contenedor_servicio">
     <a href="/fincas" class="fincas">Uso Tierra</a>
-    <a href="#"class="luz">Suelo</a>
+    <a href="/abono"class="luz">Suelo</a>
     <a href="/cultivos"class="cultivos">Cultivos</a>
     <a href="/animales"class="animales">Animales</a>
     <a href="/postcosecha"class="arboles">Post Cosecha</a>
