--- a/templates/encuesta/ingreso.html
+++ b/templates/encuesta/ingreso.html
@@ -40,10 +40,16 @@ $(document).ready(function() {
 {%block contenido%}
 <div id="sidebar">
     <div class="graficos_widget">
-        <h1>Gráficos especies de árboles</h1>
+        <h1>Gráficos ingresos</h1>
         <a href="#" id="grafico1" onCLick="click_callback('vendio')">A quien venden</a>
-        <a href="#" id="grafico2" onCLick="click_callback('maneja')">Quien maneja el negocio
+        <a href="#" id="grafico2" onCLick="click_callback('maneja')">Quien maneja el negocio</a>
         <a href="#" id="grafico3" onCLick="click_callback('ingreso')">Quien tiene los ingresos</a>
+        <h1>Gráficos Otros ingresos</h1>
+         <a href="#" id="grafico4" onCLick="click_callback('salario')">Tipos de Salarios</a>
+        <a href="#" id="grafico5" onCLick="click_callback('negocio')">Tipos de Negocio</a>
+        <a href="#" id="grafico6" onCLick="click_callback('remesa')">Tipos Remesas</a>
+        <a href="#" id="grafico7" onCLick="click_callback('alquiler')">Tipo alquiler</a>
+        <a href="#" id="grafico8" onCLick="click_callback('aportar')">Persona aportar en la finca</a>
     </div>
 </div>
 <div id="grafo"></div>
