--- a/templates/encuesta/salud_familiar.html
+++ b/templates/encuesta/salud_familiar.html
@@ -10,15 +10,13 @@
     <a href="/salud_mental"class="luz">Mental</a>
 </div>
     <div class="graficos_widget">
-        <h1>Graficos </h1>
-        <h1>Cáncer</h1>
+        <h1>Graficos cancer </h1>
         <a id="grafico6" href="#" onCLick="click_cancer(1)">¿Su pareja espera que le pida permiso antes de buscar atención medica para usted misma?</a>
         <a id="grafico7" href="#" onCLick="click_cancer(2)">¿Se ha realizado chequeos ginecológicos?</a>
         <a id="grafico8" href="#" onCLick="click_cancer(3)">¿Se ha realizado el PAP alguna vez?</a>
         <a id="grafico9" href="#" onCLick="click_cancer(4)">¿Cómo han sido los resultados de su PAP?</a>
         <a id="grafico10" href="#" onCLick="click_cancer(5)">¿Como ha hecho para tratarse los problemas que le han resultado del PAP?</a>
-        <a id="grafico11" href="#" onCLick="click_cancer(6)">¿Actualmente tiene usted algún problema de salud reproductiva que le preocupe?</a>
-        <h1>Hombres</h1> 
+        <a id="grafico11" href="#" onCLick="click_cancer(6)">¿Actualmente tiene usted algún problema de salud reproductiva que le preocupe?</a> 
     </div>
 <div id="grafo"></div>
 <table>
