--- a/templates/encuesta/salud_familiar.html
+++ b/templates/encuesta/salud_familiar.html
@@ -72,7 +72,7 @@ $(document).ready(function() {
     <a href="/salud_mental"class="luz">Mental</a>
 </div>
     <div class="graficos_widget">
-        <h1>Graficos cancer </h1>
+        <h1>Gráficos Cáncer </h1>
         <a id="grafico6" href="#" onCLick="click_cancer(1)">¿Su pareja espera que le pida permiso antes de buscar atención medica para usted misma?</a>
         <a id="grafico7" href="#" onCLick="click_cancer(2)">¿Se ha realizado chequeos ginecológicos?</a>
         <a id="grafico8" href="#" onCLick="click_cancer(3)">¿Se ha realizado el PAP alguna vez?</a>
