--- a/templates/encuesta/salud_hogar.html
+++ b/templates/encuesta/salud_hogar.html
@@ -72,7 +72,7 @@ $(document).ready(function() {
     </div>
     <div class="separador"></div>
     <div class="graficos_widget">
-        <h1>Graficos </h1>
+        <h1>Gráficos Hogar</h1>
         <a id="grafico1" href="#" onCLick="click_salud('basura')">Forma de disponer la basura</a>
         <a id="grafico2" href="#" onCLick="click_salud('donde')">Donde hacen sus necesidades</a>
         <a id="grafico3" href="#" onCLick="click_salud('tratamiento')">Tratamiento de desechos</a>
