--- a/templates/encuesta/salud_mental.html
+++ b/templates/encuesta/salud_mental.html
@@ -64,7 +64,7 @@ $(document).ready(function() {
     </div>
     <div class="separador"></div>
     <div class="graficos_widget">
-        <h1>Gráficos Salud Mental</h1>
+        <h1>Gráficos Mental</h1>
         <a id="grafico12" href="#" onCLick="click_mental(1)">Estado civil</a>
         <a id="grafico13" href="#" onCLick="click_mental(2)">¿Trata de impedirle que vea a sus amistades?</a>
         <a id="grafico14" href="#" onCLick="click_mental(3)">¿Intenta que usted no tenga contacto con su familia?</a>
