--- a/templates/encuesta/inicio.html
+++ b/templates/encuesta/inicio.html
@@ -75,7 +75,7 @@
                         <div id="contenedor_indicadores">
                             <a href="#" class="familia">Datos Generales</a>
                             <a href="/organizaciones" class="organizacion">Organización</a>
-                            <a href="/familias" class="familia">Migracion</a>
+                            <a href="/familias" class="migracion">Migracion</a>
                             <a href="/alimento" class="seguridad">Alimento</a>
                             <a href="/servicios"class="servicios">Servicios</a>
                             <a href="/servicios"class="salud">Salud</a>
