--- a/templates/base.html
+++ b/templates/base.html
@@ -42,7 +42,7 @@
                 <li><a href="/familias">Migración</a></li>
                 <li><a href="/alimento">Alimentos</a></li>
                 <li><a href="/servicios">Servicios</a></li>
-                <li><a href="/salud_hogar">Salud</a></li>
+                <li><a href="/salud">Salud</a></li>
                 <li><a href="/finca">Finca</a></li>
                 <li><a href="/ingresos">Ingreso</a></li>
                 <li><a href="/equipos">Bienes</a></li>
