--- a/templates/encuesta/abono.html
+++ b/templates/encuesta/abono.html
@@ -29,7 +29,7 @@
 <div id="sidebar">
     <div class="graficos_widget">
        <h1>Manejo de suelo</h1>
-        <a id="grafico1" href="#" onCLick="click_callback('actividad')">Hacen actividades conservación</a>
+        <a id="grafico1" href="#" onCLick="click_callback('actividad')">Hacen actividades conservación?</a>
         <a id="grafico2" href="#" onCLick="click_callback('conservacion')">Si, que actividades</a>
     </div>
 </div>
