--- a/templates/encuesta/ahorro_credito.html
+++ b/templates/encuesta/ahorro_credito.html
@@ -48,7 +48,7 @@ $(document).ready(function() {
 {%endblock%}
 {% block contenido %}
     <div class="graficos_widget">
-        <h1>Graficos</h1>
+        <h1>Gráficos</h1>
         <a id="grafico1" href="#" onCLick="click_callback('ahorro')">Ahorro</a>
         <a id="grafico2" href="#" onCLick="click_callback('origen')">Origen del Crédito</a>
         <a id="grafico3" href="#" onCLick="click_callback('satisfaccion')">Satisfacción con el crédito</a>
