--- a/templates/encuesta/cultivos.html
+++ b/templates/encuesta/cultivos.html
@@ -16,7 +16,7 @@
     <tr>
         <th>CULTIVOS</th>
         <th>Unidad</th>
-        <th>Total produccion por año</th>
+        <th>Total producción por año</th>
         <th>Consumo por año</th>
         <th>Venta libre por año</th>
         <th>Vente organizada por año</th>
