--- a/templates/encuesta/equipos.html
+++ b/templates/encuesta/equipos.html
@@ -74,7 +74,7 @@ $(document).ready(function() {
 
 {% block contenido %}
     <div class="graficos_widget">
-        <h1>Graficos de bienes</h1>
+        <h1>Gráficos de bienes</h1>
         <a id="grafico1" href="#" onCLick="click_callback('tipocasa')">Tipo Casa</a></a>
         <a id="grafico2" href="#" onCLick="click_callback('tipopiso')">Tipo Piso</a>
         <a id="grafico3" href="#" onCLick="click_callback('tipotecho')">Tipo Techo</a>
