--- a/templates/encuesta/familia.html
+++ b/templates/encuesta/familia.html
@@ -26,14 +26,14 @@
 <br></br>
 <div id="sidebar">
     <div class="graficos_widget">
-       <h1>Graficos Razones de Migración</h1>
+       <h1>Gráficos Razones de Migración</h1>
         <a id="grafico1" href="#" onCLick="click_callback('hombres')">Hombres</a>
         <a id="grafico1" href="#" onCLick="click_callback('mujeres')">Mujeres</a>
         <a id="grafico1" href="#" onCLick="click_callback('adohombres')">Adolecente Hombre</a>
         <a id="grafico1" href="#" onCLick="click_callback('adomujeres')">Adolecente Mujeres</a>
         <a id="grafico1" href="#" onCLick="click_callback('ninos')">Niños</a>
         <a id="grafico1" href="#" onCLick="click_callback('ninas')">Niñas</a>
-        <h1>Grafico Razones Migración Consolidado</h1>
+        <h1>Gráfico Razones Migración Consolidado</h1>
         <a id="grafico1" href="#" onCLick="click_callback('razones')">Razones sobre Migración</a>
     </div>
 </div>
