--- a/templates/encuesta/ingreso.html
+++ b/templates/encuesta/ingreso.html
@@ -41,9 +41,9 @@ $(document).ready(function() {
 <div id="sidebar">
     <div class="graficos_widget">
         <h1>Gráficos ingresos</h1>
-        <a href="#" id="grafico1" onCLick="click_callback('vendio')">A quien venden</a>
-        <a href="#" id="grafico2" onCLick="click_callback('maneja')">Quien maneja el negocio</a>
-        <a href="#" id="grafico3" onCLick="click_callback('ingreso')">Quien tiene los ingresos</a>
+        <a href="#" id="grafico1" onCLick="click_callback('vendio')">A quién venden?</a>
+        <a href="#" id="grafico2" onCLick="click_callback('maneja')">Quién maneja el negocio?</a>
+        <a href="#" id="grafico3" onCLick="click_callback('ingreso')">Quién tiene los ingresos?</a>
         <h1>Gráficos Otros ingresos</h1>
          <a href="#" id="grafico4" onCLick="click_callback('salario')">Tipos de Salarios</a>
         <a href="#" id="grafico5" onCLick="click_callback('negocio')">Tipos de Negocio</a>
