--- a/templates/encuesta/organizacion.html
+++ b/templates/encuesta/organizacion.html
@@ -40,7 +40,7 @@
 <div id="sidebar">
     <div class="graficos_widget">
         <h1>Gráficos</h1>
-        <a href="#" id="grafico1" onCLick="click_callback('miembro')">Por que es miembro</a>
+        <a href="#" id="grafico1" onCLick="click_callback('miembro')">Por qué es miembro?</a>
         <a href="#" id="grafico2" onCLick="click_callback('beneficio')">Beneficio de ser socios/socias</a>
     </div>
 </div>
