--- a/templates/encuesta/produccion.html
+++ b/templates/encuesta/produccion.html
@@ -113,7 +113,7 @@ $(document).ready(function() {
         <a href="#" id="grafico1" onCLick="click_callback('alimentosbasico')">Alimentos Básicos</a>
         <a href="#" id="grafico2" onCLick="click_callback('necesidadbasica')">Necesidades Básicas</a>
         <a href="#" id="grafico3" onCLick="click_callback('razonesfalta')">Razones de falta</a>
-        <a href="#" id="grafico4" onCLick="click_callback('mesesdificil')">Meses Dificiles</a>
+        <a href="#" id="grafico4" onCLick="click_callback('mesesdificil')">Meses Difíciles</a>
         <a href="#" id="grafico5" onCLick="click_callback('cafeprecio')">Café cuando baja</a>
         <a href="#" id="grafico6" onCLick="click_callback('accionesescazes')">Acciones escasez</a>
         <a href="#" id="grafico7" onCLick="click_callback('conseguir')">De donde conseguir</a>
@@ -142,4 +142,5 @@ $(document).ready(function() {
     </tr>
     {%endfor%}
 </table>
+<br><br><br><br><br>
 {%endblock%}
