--- a/templates/encuesta/salud.html
+++ b/templates/encuesta/salud.html
@@ -2,10 +2,10 @@
 {% block title %}Cecocafen - salud{% endblock %}
 {%block titulo%}Salud{%endblock%}
 {% block contenido %}
-                        <div id="contenedor_servicio">
-                            <a href="/salud-hogar" class="salud">Hogar</a>
-                            <a href="/salud-familiar"class="luz">Familia</a>
-                            <a href="/salud-mental"class="luz">Mental</a>
-                        </div>
+<div id="contenedor_servicio">
+    <a href="/salud_hogar" class="salud">Hogar</a>
+    <a href="/salud_familiar"class="familia">Familia</a>
+    <a href="/salud_mental"class="luz">Mental</a>
+</div>
                         <div class="separador"></div>
 {% endblock %}
