--- a/templates/encuesta/salud_familiar.html
+++ b/templates/encuesta/salud_familiar.html
@@ -68,7 +68,7 @@ $(document).ready(function() {
 {% block contenido %}
 <div id="contenedor_servicio">
     <a href="/salud_hogar" class="salud">Hogar</a>
-    <a href="/salud_familia"class="luz">Familia</a>
+    <a href="/salud_familiar"class="familia">Familia</a>
     <a href="/salud_mental"class="luz">Mental</a>
 </div>
     <div class="graficos_widget">
