--- a/templates/encuesta/salud_hogar.html
+++ b/templates/encuesta/salud_hogar.html
@@ -66,18 +66,18 @@ $(document).ready(function() {
 {% block contenido %}
 
     <div id="contenedor_servicio">
-        <a href="/salud_hogar" class="salud">Hogar</a>
-        <a href="/salud_familiar"class="familia">Familia</a>
-        <a href="/salud_mental"class="luz">Mental</a>
-    </div>
+    <a href="/salud_hogar" class="salud">Hogar</a>
+    <a href="/salud_familiar"class="familia">Familia</a>
+    <a href="/salud_mental"class="luz">Mental</a>
+</div>
     <div class="separador"></div>
     <div class="graficos_widget">
         <h1>Gráficos Hogar</h1>
         <a id="grafico1" href="#" onCLick="click_salud('basura')">Forma de disponer la basura</a>
-        <a id="grafico2" href="#" onCLick="click_salud('donde')">Donde hacen sus necesidades</a>
+        <a id="grafico2" href="#" onCLick="click_salud('donde')">Donde hacen sus necesidades?</a>
         <a id="grafico3" href="#" onCLick="click_salud('tratamiento')">Tratamiento de desechos</a>
         <a id="grafico4" href="#" onCLick="click_salud('frecuencia')">Frecuencia de limpieza</a>
-        <a id="grafico5" href="#" onCLick="click_salud('envases')">Que hace con envases agroquímicos</a>
+        <a id="grafico5" href="#" onCLick="click_salud('envases')">Que hace con envases agroquímicos?</a>
     </div>
 <div id="grafo"></div>
 <br><br><br><br><br><br><br><br><br><br><br><br>
